--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
 	"private": true,
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --open --mode development",
-		"build": "webpack --mode production"
+		"start": "react-scripts start",
+		"build": "webpack --mode production",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
 	},
 	"author": "",
 	"license": "ISC",
@@ -16,6 +18,8 @@
 		"random-words": "^1.1.0",
 		"react": "^16.3.2",
 		"react-dom": "^16.3.2",
+		"react-router-dom": "^4.2.2",
+		"react-scripts": "^1.1.4",
 		"webpack": "^4.6.0"
 	},
 	"devDependencies": {
